# cuttle

./: Cargo.toml  LICENSE  README.md
examples/: hello_world.ct  numbers.ct
src/: main.rs
src/parser/: grammar.pest  grammar.rs  mod.rs  precedence.rs
src/parser/ast/: access.rs  binop.rs  boolean.rs  class.rs  compound.rs  control.rs  declaration.rs  expression.rs  float.rs  function.rs  instance.rs  integer.rs  local.rs  mod.rs  namespace.rs  string.rs  structs.rs  typespec.rs  unaryop.rs
src/types/: mod.rs  typecheck.rs
