[package]
name = "cuttle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
pest_consume = "1.1.1"
pest_consume_macros = "1.1.0"
enum_dispatch = "0.3.8"